Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     }
 
     function openExemple(){
-        window.open(domain+"/?tags=commerce&command=add_shop(commerce,ma_boulangerie),add_promo(invendus)");
+        window.open(domain+"/?tags=commerce&command=add_shop(commerce;ma_boulangerie),add_promo(invendus)");
     }
 
     function run(){
