Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>REDUCSHARE</title>
+  <title>REDUCSHARE le marketing virale des indépendants et du commerce de proximité</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
