Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="row align-content-center">
       <div class="col-lg-8 mx-auto text-center">
         <br><br><br><br>
-        <h2 class="mb-4">Un petit exemple de fonctionnement</h2>
+        <h2 class="mb-4">Un exemple</h2>
 
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="7000">
           <div class="carousel-inner">
