--- a/faq.html
+++ b/faq.html
@@ -189,7 +189,11 @@
   function run(){
     createFaq(
             document.getElementById("faq_template").innerHTML,
-            document.getElementById("faq_zone")
+            document.getElementById("faq_zone"),null,
+        ()=>{
+                let brand=getParam().brand;
+                if(brand)document.body.innerHTML = replaceAll(document.body.innerHTML, "REDUCSHARE", brand);
+        }
     );
   }
 
