Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h1 class="mx-auto my-0 text-uppercase">REDUCSHARE</h1>
       <br><br>
       <h2 class="text-white-50 mx-auto mt-2 mb-5">
-        Transformer vos clients en vendeur grâce aux promotions dynamiques
+        Le marketing viral accessible aux indépendants, artisans et commerces de proximité
       </h2>
       <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Commencer</a>
     </div>
